--- a/Simple Model.ipynb
+++ b/Simple Model.ipynb
@@ -1079,7 +1079,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = build_model(embed_size=len(token2int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {
     "id": "Tqx2pTLyOcPd"
    },
@@ -1118,7 +1127,6 @@
     }
    ],
    "source": [
-    "model = build_model(embed_size=len(token2int))\n",
     "model.summary()"
    ]
   },
